グローバルナビゲーションスタイルSPまで完成

--- a/scss/_top.scss
+++ b/scss/_top.scss
@@ -21,6 +21,7 @@ img {
 
 a {
   color: var(--primary);
+  text-decoration: none;
 
   &:hover {
     color: var(--secondary);
@@ -71,3 +72,202 @@ ol {
     }
   }
 }
+
+.btn {
+  display: inline-block;
+  border-radius: 5px;
+  padding: 1rem;
+  line-height: 1;
+  transition: 0.3s;
+  min-width: 200px;
+  text-align: center;
+
+  &-primary {
+    background-color: var(--primary);
+    color: #fff;
+
+    &:hover {
+      background-color: var(--secondary);
+      color: #fff;
+    }
+  }
+
+  &-primary-line {
+    border: 1px solid #333;
+    color: var(--primary);
+
+    &:hover {
+      color: var(--secondary);
+    }
+  }
+}
+
+// ヘッダー
+.global-nav {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  backdrop-filter: blur(4px);
+  background-color: rgba(#fff, 0.9);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  // display: none;
+  opacity: 0;
+  z-index: -1;
+  transition: opacity 0.3s;
+  width: 0;
+  height: 0;
+  overflow: hidden;
+
+  ul {
+    li {
+      &:not(:first-child) {
+        margin-top: 1rem;
+      }
+
+      a {
+        display: block;
+        width: 240px;
+        padding-bottom: 8px;
+        text-align: center;
+        position: relative;
+        color: var(--text);
+        font-size: 1.5rem;
+
+        &::after {
+          content: "";
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          width: 100%;
+          height: 7px;
+
+          --size: 2px;
+          background: repeating-linear-gradient(
+            -45deg,
+            #ffffff 0,
+            #ffffff var(--size),
+            var(--secondary) var(--size),
+            var(--secondary) calc(var(--size) * 2)
+          );
+        }
+      }
+    }
+  }
+
+  // チェックボックス
+  &-toggler {
+    display: none;
+  }
+
+  // ボタン
+  &-btn {
+    position: fixed;
+    top: 5%;
+    right: 5%;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    z-index: 2;
+
+    span {
+      text-indent: 100%;
+      white-space: nowrap;
+      display: block;
+      overflow: hidden;
+      height: 2px;
+      width: 100%;
+      background-color: #ccc;
+      transition: opacity 0.3s;
+    }
+
+    &::before,
+    &::after {
+      content: "";
+      height: 2px;
+      width: 100%;
+      background-color: #ccc;
+      position: absolute;
+      top: 50%;
+      left: 0;
+      transform: translateY(-50%);
+      transition: transform 0.3s;
+    }
+
+    &::before {
+      transform: translateY(calc(-50% - 10px));
+    }
+    &::after {
+      transform: translateY(calc(-50% + 10px));
+    }
+  }
+
+  &-toggler:checked ~ & {
+    // display: flex;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    opacity: 1;
+    z-index: 1;
+  }
+
+  &-toggler:checked ~ &-btn span {
+    opacity: 0;
+  }
+  &-toggler:checked ~ &-btn::before {
+    transform: translateY(-50%) rotate(45deg);
+    background-color: var(--text);
+  }
+  &-toggler:checked ~ &-btn::after {
+    transform: translateY(-50%) rotate(-45deg);
+    background-color: var(--text);
+  }
+
+  // PC =====
+  @include mq {
+    // グローバルナビゲーション
+    width: 100%;
+    height: auto;
+    overflow: auto;
+    opacity: 1;
+    z-index: initial;
+    backdrop-filter: blur(0px);
+    background-color: transparent;
+    display: block;
+    padding: 1rem 0;
+
+    ul {
+      max-width: 1200px;
+      margin-left: auto;
+      margin-right: auto;
+      display: flex;
+      justify-content: flex-end;
+
+      li {
+        &:not(:first-child) {
+          margin-top: 0;
+          margin-left: 4rem;
+        }
+
+        a {
+          font-size: 1rem;
+          width: auto;
+          padding-bottom: 0;
+          color: var(--primary);
+          text-shadow: 0 0 5px #ccc;
+
+          &::after {
+            content: none;
+          }
+        }
+      }
+    }
+
+    // ボタン
+    &-btn {
+      display: none;
+    }
+  }
+} //.global-nav
