--- a/scss/_top.scss
+++ b/scss/_top.scss
@@ -276,12 +276,19 @@ ol {
 .mv {
   height: 85vh;
 
+  // slick
+  .slick-list,
+  .slick-track {
+    height: 100%;
+  }
+
   &__panel {
     // border-bottom-right-radius: 50% 30px;
     // border-bottom-left-radius: 50% 30px;
     // overflow: hidden;
     height: 100%;
     position: relative;
+    filter: brightness(70%);
 
     img {
       clip-path: inset(0 0 15px 0);
@@ -298,7 +305,7 @@ ol {
       mask-image: url(../img/curve.svg);
       mask-repeat: no-repeat;
       mask-position: center bottom;
-      mask-size: 100% 15px;
+      mask-size: 100% calc(15px + 0.08%);
       position: absolute;
       width: 100%;
       height: 100%;
@@ -310,5 +317,41 @@ ol {
       width: 100%;
       height: 100%;
     }
+  }
+}
+
+.site-header {
+  position: relative;
+}
+
+.site-logo {
+  position: absolute;
+  z-index: 1;
+  bottom: 25%;
+  left: 0;
+
+  p {
+    color: #fff;
+    text-align: center;
+  }
+}
+
+.scroll-indicator {
+  position: absolute;
+  bottom: 10%;
+  left: 50%;
+  transform: translateX(-50%);
+  color: #fff;
+  font-size: 0.8rem;
+  z-index: 1;
+
+  &::before {
+    content: "";
+    height: 1px;
+    width: 110%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: #fff;
   }
 }
